Add github's sign in and application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=e483716141ace6b7f601
+github.client.secret=f57546a7c3ac44266cac2780bb3fa1176d4e6431
+github.redirect.uri=http://localhost:8887/callback
