--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8887
 github.client.id=e483716141ace6b7f601
 github.client.secret=f57546a7c3ac44266cac2780bb3fa1176d4e6431
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
