Renamed directory and Added Mybatis Generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
 #\u5F00\u542F\u9A7C\u5CF0\u89C4\u5219\u529F\u80FD
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=cn.lsnf.community.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
