--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
+        <!--腾讯云 Java SDK-->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.8</version>
+        </dependency>
     </dependencies>
 
     <build>
