--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8887
 github.client.id=e483716141ace6b7f601
-github.client.secret=335c4938c779d08b9995224c55f6bdde31a9a364
+github.client.secret=
 github.redirect.uri=http://localhost:8887/callback
-qcloud.secret.id=AKIDZEsbXQsitcN2Xv5eppfSC2lMpgR2ZwhN
-qcloud.secret.key=e9SbZG7TcgcOzTflkjqtqbAvWB9j8LMA
+qcloud.secret.id=
+qcloud.secret.key=
 qcloud.bucket.name=zengzhilai-1259569030
 qcloud.region.name=ap-beijing
 spring.datasource.url=jdbc:h2:~/community
