Finished the function of hot tags

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8887
 github.client.id=e483716141ace6b7f601
-github.client.secret=
+github.client.secret=3a0476b84266f9cf8095fbb51c57cf77c8837b62
 github.redirect.uri=http://localhost:8887/callback
-qcloud.secret.id=
-qcloud.secret.key=
+qcloud.secret.id=AKIDHPkwEpj7NgFav4gfJnEdsxthJoNVsax8
+qcloud.secret.key=FFk25IH5QVP7evxlO6YjPskNkunTuA9F
 qcloud.bucket.name=zengzhilai-1259569030
 qcloud.region.name=ap-beijing
 spring.datasource.url=jdbc:h2:~/community
@@ -16,6 +16,5 @@ mybatis.type-aliases-package=cn.lsnf.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
 logging.file=logs/community.log
 logging.level.root=info
-logging.level.cn.lnsf.community.mapper=debug
 logging.file.max-size=100MB
 logging.file.max-history=15
