--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,21 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <!--环境分离-->
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <db.url>jdbc:h2:~/community</db.url>
+                <db.user>sa</db.user>
+                <db.password>123</db.password>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -95,11 +110,11 @@
                 <version>6.0.3</version>
                 <configuration>
                     <!--properties文件中的url 数据库连接的路径-->
-                    <url>jdbc:h2:~/community</url>
+                    <url>${db.url}</url>
                     <!--properties文件中的username-->
-                    <user>sa</user>
+                    <user>${db.user}</user>
                     <!--properties文件中的password-->
-                    <password>123</password>
+                    <password>${db.password}</password>
                 </configuration>
                 <dependencies>
                     <dependency>
